# master-thesis

./: .gitignore  CMakeLists.txt  README.md
bspedupack/: bspbench.cpp
lib/: bsp_pprefix.h  ff_bsp.hpp
tests/: aggregate.cpp  parallel_prefix.cpp  parallel_prefix_simple.cpp  prefix_sum.cpp  provah.cpp  shrinking_ds.cpp  superstep_loop.cpp
